cmake_minimum_required(VERSION 3.0.0)
project(CPPChrashCourse-CmakeConfiguredAssignments)
add_executable(Miniproject-Sudokusolver ./SudokuProject2/sudokusolver.cpp ./SudokuProject2/sudokuGrid.cpp)
add_executable(Day1-Assignment1-posnumbers ./Day1/Assigment1_Code/posnumbers.cpp)
add_executable(Day1-Assignment2-chiper ./Day1/Assignment2_Code/chiper.cpp)
add_executable(Day1-BonusAssignment-GuessNumber ./Day1/AssignmentBonus_Code/guessnumber.cpp)
add_executable(Day2-Assignment1-posnumbersarray ./Day2/Assigment1_Code/posnumbersarray.cpp)
add_executable(Day2-Assignment2-linkedlist ./Day2/Assigment2_Code/linkedlist.cpp)
